# spiff_data_engineering_exercises

./: .gitignore  README.md
spiff_de_exercise/: main.py  pyproject.toml
spiff_de_exercise/tests/: test_spiff_de_exercise.py
